--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/icons8-vaso-de-planta-16.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Atividade web 3</title>
 </head>
@@ -36,29 +37,21 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
+                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                          <li class="nav-item mx-4">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item mx-4">
                             <a class="nav-link" href="#">Paisagismo</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Dicas</a>
+                          <li class="nav-item mx-4">
+                            <a class="nav-link" href="#">Blog</a>
                           </li>
-                          <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Guia de plantas
-                            </a>
-                            <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">Suculentas</a></li>
-                              <li><a class="dropdown-item" href="#">Flores</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Cactos</a></li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Login</a>
-                              </li>
-                            </ul>
+                          <li class="nav-item mx-4">
+                            <a class="nav-link" href="#">Guia de plantas</a>
+                          </li>
+                          <li class="nav-item mx-4">
+                              <a class="nav-link" href="#">Login</a>
                           </li>
                         </ul>
                       </div>
@@ -66,6 +59,66 @@
                   </nav>
             </div>
         </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center">
+          <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="imagens/folhas_g_resized.jpg" class="d-block w-100" alt="folhas verdes">
+                <div class="carousel-caption d-md-block chamada">
+                  <h5>Guia de plantas</h5>
+                  <p>Guia completo de todas as plantas.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="imagens/casamento_g_resized.jpg" class="d-block w-100" alt="maos assinando papel com rosas brancas ao fundo">
+                <div class="carousel-caption d-md-block chamada">
+                  <h5>Decorações</h5>
+                  <p>Dicas para decoração de casamentos.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="imagens/rosa_g_resized.jpg" class="d-block w-100" alt="rosa vermelha">
+                <div class="carousel-caption d-md-block chamada">
+                  <h5>Ideias de flores</h5>
+                  <p>Inpirações e ideias de flores.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid fundo">
+      <div class="row">
+        <div class="col-md-6 d-flex flex-column justify-content-center texto">
+          <h2>O melhor site para apaixonados por jardinagem!</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur assumenda optio quo, at cum amet omnis velit necessitatibus maxime officiis qui hic repellendus, vel vitae sint in fugiat, ut earum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur laudantium atque, at culpa dolorem corrupti voluptatem laboriosam dicta omnis earum maiores et voluptates. Saepe nihil cupiditate adipisci? Sed, deleniti.</p>
+          <div class="row">
+            <div class="col-12 d-flex justify-content-md-start">
+              <button class="botao">Saiba mais</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 img_sucu_branco d-flex justify-content-center align-items-center">
+          <img src="imagens/sucu_branco.jpg" alt="algumas suculentas à direita com fundo branco">
+        </div>
+      </div>
     </div>
 </body>
 </html>
